--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.20.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
     "querystring": "^0.2.0",
     "react": "^16.13.1",
