--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-session": "^1.17.1",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
+    "query-string": "^6.13.5",
     "querystring": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
